--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@types/jquery": "^3.5.1",
     "bootstrap": "4.1.1",
     "ngx-bootstrap": "^6.1.0",
     "ngx-dropdown-list": "^1.1.1",
