--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "4.1.1",
     "ngx-bootstrap": "^6.1.0",
     "ngx-dropdown-list": "^1.1.1",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
