--- a/angular.json
+++ b/angular.json
@@ -125,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "lyriceum"
+  "defaultProject": "lyriceum",
+  "cli": {
+    "analytics": false
+  }
 }
